--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
   left: 50px;
   width: 50px;
   height: 30px;
+  border: 2px solid black;
   border-radius: 15px 15px 0 0;
   rotate: -30deg;
 }
@@ -50,6 +51,7 @@ body {
   left: 135px;
   width: 50px;
   height: 30px;
+  border: 2px solid black;
   border-radius: 15px 15px 0 0;
 }
 
@@ -77,6 +79,7 @@ body {
   right: 50px;
   width: 50px;
   height: 30px;
+  border: 2px solid black;
   border-radius: 15px 15px 0 0;
   rotate: 30deg;
 }
